# risk

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
app/: config.py  main.py
app/api/routes/: health.py  risk.py  stocks.py
app/core/: calculator.py  data_loader.py
app/db/: init_db.py  models.py  queries.py  session.py
scripts/: ingest.py
